G4E-6688 - Fix app manager main logo flicker on expand.

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -389,18 +389,20 @@ html {
       .logo {
         display: flex;
         align-items: center;
-        gap: 0.66em;
         width: 100%;
         height: 100%;
         padding: 0 1.25em;
         overflow: hidden;
 
-        &-icon {
-          height: 60%;
+        svg {
+          width: 100%;
+          height: 100%;
         }
 
-        &-wordmark {
-          height: 25%;
+        &-icon {
+          flex-shrink: 0;
+          width: 2.33em;
+          height: 60%;
         }
       }
     }
